--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "esinit": "eslint --init",
     "dev": "parcel index.html",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test:e2e": "cypress open",
+    "test:e2e:open": "cypress open",
+    "ci": "start-server-and-test dev http://localhost:1234 test:e2e"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +17,7 @@
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "cypress": "^8.4.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
@@ -23,5 +27,10 @@
     "jest": "^27.2.0",
     "parcel-bundler": "^1.12.5",
     "ts-jest": "^27.0.5"
+  },
+  "dependencies": {
+    "@types/cypress": "^1.1.3",
+    "eslint-plugin-cypress": "^2.12.1",
+    "start-server-and-test": "^1.14.0"
   }
 }
